<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:background="@color/colorFindBG"
    tools:context="com.kookmintaxi.android.screen.Find">

    <TextView
        android:id="@+id/find_route_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="출발: 국민대 / 도착: 성신여대"/>
    <TextView
        android:id="@+id/find_filter_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_route_summary"
        android:layout_centerHorizontal="true"
        android:text="10분내 출발 / 남자여자 상관없이" />

    <TextView
        android:id="@+id/find_info_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_filter_option"
        android:paddingTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/find_info_message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_below="@id/find_info_message"
        android:background="@android:color/white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/find_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="50dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="35dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/find_info_message_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/find_info_message_2"/>

        <TextView
            android:id="@+id/find_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/find_result"/>

    </LinearLayout>

    <Button
        android:id="@+id/find_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/find_cancel"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPositive"
        android:textColor="@android:color/white"
        android:text="@string/find_confirm"/>

    <Button
        android:id="@+id/find_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorNegative"
        android:textColor="@android:color/white"
        android:text="@string/find_cancel"/>

</RelativeLayout>
