<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBG"
    tools:context="com.kookmintaxi.android.screen.Main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/main_img_bg"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main_img_bg"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/app_small_main_text"/>

                <TextView
                    android:id="@+id/main_intro_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/main_img_bg"
                    android:layout_alignBottom="@id/main_img_bg"
                    android:paddingRight="25dp"
                    android:paddingBottom="25dp"
                    android:gravity="right"
                    android:textSize="33sp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/main_from_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="15sp"
                    android:text="@string/main_from_label"/>
                <TextView
                    android:id="@+id/main_to_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/main_from_label"
                    android:textSize="15sp"
                    android:text="@string/main_to_label"/>

                <TextView
                    android:id="@+id/main_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/main_from_label"
                    android:layout_alignBaseline="@id/main_from_label"
                    android:textSize="27sp"
                    android:text="@string/input_from_place"/>

                <TextView
                    android:id="@+id/main_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/main_to_label"
                    android:layout_alignBaseline="@id/main_to_label"
                    android:textSize="27sp"
                    android:text="@string/input_to_place"/>

                <View
                    android:id="@+id/route_div"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="30dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_below="@id/main_to_label"
                    android:background="@android:color/black"/>

                <Button
                    android:id="@+id/main_btn_set_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/route_div"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_main_set_detail"/>

                <LinearLayout
                    android:id="@+id/main_filter_detail_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/main_btn_set_detail"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/departure_time_container"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/departure_time_label"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/departure_time_label"/>

                        <Button
                            android:id="@+id/main_btn_10_min"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/departure_time_10_min"
                            android:textColor="@android:color/white"
                            android:textSize="15sp"
                            android:background="@color/colorPrimary"/>
                        <Button
                            android:id="@+id/main_btn_30_min"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/departure_time_30_min"
                            android:textSize="15sp"
                            android:background="@drawable/square_line_border"/>
                        <Button
                            android:id="@+id/main_btn_1_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/departure_time_1_hour"
                            android:textSize="15sp"
                            android:background="@drawable/square_line_border"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/max_count_container"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/max_count_label"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/max_count_label"/>
                        <Button
                            android:id="@+id/minus"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:text="-"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:background="@color/colorPrimary"/>
                        <TextView
                            android:id="@+id/person_count"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/square_line_border"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:text="2"/>
                        <Button
                            android:id="@+id/plus"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:text="+"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:background="@color/colorPrimary"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/gender_container"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/main_btn_gender_all"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/gender_all"
                            android:textColor="@android:color/white"
                            android:textSize="15sp"
                            android:background="@color/colorPrimary"/>
                        <Button
                            android:id="@+id/main_btn_gender_male"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/gender_male"
                            android:textSize="15sp"
                            android:background="@drawable/square_line_border"/>
                        <Button
                            android:id="@+id/main_btn_gender_female"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/gender_female"
                            android:textSize="15sp"
                            android:background="@drawable/square_line_border"/>

                    </LinearLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/main_predic_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_filter_detail_container"
                    android:paddingTop="30dp"
                    android:text="@string/predict_cost_placeholder"/>

                <TextView
                    android:id="@+id/main_find_filter_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_predic_cost"
                    android:text="@string/find_filter_placeholder"/>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/main_btn_find_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/main_find_start"/>

</LinearLayout>
