<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFindBG"
    tools:context="com.kookmintaxi.android.screen.Register">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/register_service"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/toolbar">

        <EditText
            android:id="@+id/register_input_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:background="@android:color/white"/>

        <LinearLayout
            android:id="@+id/register_input_gender"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_below="@id/register_input_name"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/register_male_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:background="@drawable/white_square_border"
                android:textSize="20dp"
                android:text="@string/male"/>
            <TextView
                android:id="@+id/register_female_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:background="@drawable/white_square_border"
                android:textSize="20dp"
                android:text="@string/female"/>
        </LinearLayout>

        <EditText
            android:id="@+id/register_input_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/register_input_gender"
            android:inputType="number"
            android:maxLength="11"
            android:background="@android:color/white"/>

        <LinearLayout
            android:id="@+id/register_input_grade"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_below="@id/register_input_phone">
            <TextView
                android:id="@+id/register_grade_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/white_square_border"
                android:textSize="20dp"
                android:text="1"/>
            <TextView
                android:id="@+id/register_grade_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/white_square_border"
                android:textSize="20dp"
                android:text="2"/>
            <TextView
                android:id="@+id/register_grade_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/white_square_border"
                android:textSize="20dp"
                android:text="3"/>
            <TextView
                android:id="@+id/register_grade_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/white_square_border"
                android:textSize="20dp"
                android:text="4"/>

        </LinearLayout>


        <TextView
            android:id="@+id/register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/register_input_name"
            android:layout_toLeftOf="@id/register_input_name"
            android:textSize="20sp"
            android:text="@string/register_name_label"/>

        <TextView
            android:id="@+id/register_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/register_name"
            android:layout_below="@id/register_name"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:text="@string/register_gender_label"/>

        <TextView
            android:id="@+id/register_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/register_input_phone"
            android:layout_toLeftOf="@id/register_input_phone"
            android:textSize="20sp"
            android:text="@string/register_phone_label"/>

        <TextView
            android:id="@+id/register_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/register_input_grade"
            android:layout_alignRight="@id/register_name"
            android:layout_below="@id/register_phone"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:text="@string/register_grade_label"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_input_grade"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/register"/>
    </RelativeLayout>


</RelativeLayout>
